--- a/frontend/src/assets/css/common.css
+++ b/frontend/src/assets/css/common.css
@@ -253,90 +253,52 @@ select {
 .customTable {
   @apply flex;
   & .header {
-    width: 40%;
-    height: 45px;
-    display: flex;
-    line-height: 40px;
-    padding-left: 20px;
-    background-color: #FBFBFB;
-    justify-content :space-between;
-    @apply border border-solid border-gray-200;
+    @apply border border-solid border-gray-200 flex justify-between w-5/12 h-11 leading-10 pl-5 bg-gray-50;
   }
   & .value {
-    width: 60%;
-    height: 45px;
-    line-height: 40px;
-    border: 1px solid var(--gray-300);
+    @apply w-7/12 h-11 leading-10 border border-solid border-gray-200;
     & input {
-      width: 70%;
-      height: 30px;
-      padding-left: 15px;
-      margin-left :12px;
-      margin-top: 5px;
-      @apply border border-solid border-gray-200;
+      @apply border border-solid border-gray-200 pl-4 ml-3 mt-1 h-8 w-8/12;
     }
     & input[type=radio] {
-      width: 70%;
-      padding-left: 20px;
-      @apply border border-solid border-gray-200;
-      width:15px;
-      height: 40px;
+      @apply border border-solid border-gray-200 w-8/12 pl-5 w-4 h-10;
       margin-top: 0 !important;
       accent-color: var(--primary-color);
     }
   }
   & select {
-    width: 70%;
-    height: 35px;
-    line-height: 40px;
-    padding-left: 15px;
-    margin-left :12px;
-    margin-top: 3px;
-    @apply border border-solid border-gray-200;
-  
+    @apply border border-solid border-gray-200 mt-1 ml-3 pl-4 leading-10 h-9 w-8/12;
   }
   & .flex > .value div {
-    width: 100%;
-    padding-left: 20px;
+    @apply w-full pl-5;
   }
 }
 
 .pipelineUpdateConvertVFT {
-  margin-top: 20px;
+  @apply mt-5;
   & .value {
     @apply border border-solid border-gray-200 w-7/12 h-11 leading-10;
   }
   & th {
-    border-top: 2px solid var(--primary-color);
-    background-color: #FBFBFB !important;
+    @apply border-t-2 border-solid bg-gray-50;
+    border-color: var(--primary-color);
     & .text-start{
-      text-align: center !important;
+      @apply text-center;
     }
   }
   & td.text-start{
-    text-align: center !important;
-    padding:0 !important;
-    font-size: 12px !important;
+    @apply text-center p-0 text-xs;
   }
   & input {
-    width: 70%;
-    padding-left: 10px;
-    height: 70%;
-    margin :12px;
-    @apply border border-solid border-gray-200;
+    @apply border border-solid border-gray-200 w-8/12 pl-3 h-4/6 m-3;
   }
   & select {
-    width: 70%;
-    height: 70%;
-    padding-left: 10px;
-    margin :12px;
-    @apply border border-solid border-gray-200;
+    @apply border border-solid border-gray-200 w-8/12 pl-3 h-4/6 m-3;
   }
   & .v-data-table__wrapper {
     & th:nth-of-type(1), td:nth-of-type(1) {
       width: 40%;
-      @apply border-l border-r border-b border-solid border-gray-200;
-      background-color: #FBFBFB;
+      @apply border-l border-r border-b border-solid border-gray-200 bg-gray-50;
     }
     & th:nth-of-type(2), td:nth-of-type(2) {
       width: 60%;
@@ -371,8 +333,8 @@ select {
     border: 1px solid var(--gray-300);
   }
   & th{
-    border-top: 2px solid var(--primary-color);
-    background-color: #FBFBFB;
+    @apply bg-gray-50 border-t-2 border-solid;
+    border-color: var(--primary-color);
   }
   & .v-data-table__wrapper {
     & th:nth-of-type(1), td:nth-of-type(1) {
